# sb-interpreter

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  HARVEST_QUEUE.md  PRD.md  README.md  ralph-continuous-watch.sh  ralph-postmortem.html  ralph.sh
.beads/: metadata.json
.chainlink/: hook-config.json  issues.db
.claude/: settings.json
.claude/mcp/: safe-fetch-server.py
.github/workflows/: ci.yml  harvest.yml  pages.yml
.ralph/: NEXT_RUN.md  NEXT_RUN_NOTES.md
crates/sb-audio/: Cargo.toml
crates/sb-audio/src/: effects.rs  instruments.rs  lib.rs  mml.rs  stream.rs  synth.rs
crates/sb-core/: Cargo.toml
crates/sb-core/.chainlink/.cache/: last-edit-time
crates/sb-core/benches/: vm_throughput.rs
crates/sb-core/src/: array.rs  ast.rs  builtins.rs  bytecode.rs  clock.rs  compiler.rs  consts.rs  error.rs  host_input.rs  input.rs  input_buffer.rs  lexer.rs  lib.rs  parser.rs  rng.rs  storage.rs  sysvars.rs  token.rs  value.rs  vm.rs
crates/sb-core/src/builtins/: bg.rs  console.rs  data.rs  device.rs  files.rs  graphics.rs  input.rs  math.rs  mod.rs  prg.rs  screen.rs  sound.rs  sprite.rs  string.rs
crates/sb-core/tests/: basics_cases.rs  conformance.rs  constants_table.rs  corpus_compile.rs  fuzz_corpus.rs
crates/sb-platform-native/: Cargo.toml
crates/sb-platform-native/.chainlink/.cache/: last-edit-time
crates/sb-platform-native/src/: audio.rs  lib.rs  main.rs  storage.rs
crates/sb-platform-wasm/: Cargo.toml
crates/sb-platform-wasm/.chainlink/.cache/: last-edit-time
crates/sb-platform-wasm/src/: lib.rs  storage.rs
crates/sb-render/: Cargo.toml
crates/sb-render/.chainlink/.cache/: last-edit-time
crates/sb-render/src/: anim.rs  assets.rs  bg.rs  bitmap.rs  compositor.rs  console.rs  font.rs  grp.rs  inflate.rs  lib.rs  png.rs  raster.rs  sprite.rs
crates/sb-render/src/assets/: background.deflate  font.deflate  sprite.deflate
crates/sb-render/tests/: console_golden.rs  gfx_golden.rs
crates/sb-spec/: Cargo.toml
crates/sb-spec/src/: lib.rs  main.rs
crates/sb-spec/tests/: specs_load.rs
harness/: README.md
harness/corpus/: README.md
harness/diff/: __init__.py  png_util.py  replay.py  run.py
harness/fuzz/: __init__.py  generator.py
harness/harvest/: README.md  __init__.py  acls_cases.txt  acls_disp3.txt  acls_display2.txt  acls_tabstep.txt  beep_cases.txt  bganim_cases.txt  bgclr_cases.txt  bgfunc_cases.txt  bgfunc_cases2.txt  bgfunc_cases3.txt  bghide_cases.txt  bgmchk_cases.txt  bgmclear_cases.txt  bgmplay_cases.txt  bgmset_cases.txt  bgmsetd_cases.txt  bgmvar_cases.txt  bgmvol_cases.txt  bgsaveload_cases.txt  bgscreen_cases.txt  bgshow_cases.txt  bgstartstop_cases.txt  gline_robust.txt  gload_cases.txt  gpset_alpha.txt  gpset_cases.txt  gsave_cases.txt  gtri_cases.txt  gtri_color.txt  gtri_fill_RE.md  gtri_fill_line_cases.txt  gtri_fill_model.py  gtri_fill_skew_cases.txt  gtri_seed_brute.py  gtri_seed_probe.py  gtri_transposed.py  harvest.py  m7t5_builtin_rettype.txt  (+10 more)
harness/oracle/: __init__.py  audio.py  citra_rpc.py  extdata.py  framebuffer.py
harness/orchestration/: README.md  impl-dispatch.sh  impl-worker.sh  integrate.sh  lib.sh  oracle-lane.sh  setup.sh
prd/: M0.md  M1.md  M2.md  M3.md  M4.md  M5.md  M6.md  M7.md  README.md  oracle.md  specs.md
sb-docs/: README.md  STANDARD.md
sb-docs/petit-computer/: abs.md  acls.md  asc.md  background.md  bgchk.md  bgclip.md  bgclr.md  bgcopy.md  bgfill.md  bgofs.md  bgpage.md  bgput.md  bgread.md  chkchr.md  cls.md  color.md  console.md  function.md  gcolor.md  gline.md  gpage.md  gprio.md  gpset.md  graphics.md  gspoit.md  input.md  linput.md  locate.md  operator.md  print.md  spangle.md  spanim.md  spchr.md  spclr.md  sphit.md  sphitsp.md  sphome.md  spofs.md  sppage.md  spread.md  (+5 more)
sb-docs/smilebasic-3/: README.md  abs.md  accel.md  acls.md  acos.md  and.md  asc.md  asin.md  atan.md  attr.md  backcolor.md  backtrace.md  beep.md  bganim.md  bgchk.md  bgclip.md  bgclr.md  bgcolor.md  bgcoord.md  bgcopy.md  bgfill.md  bgfunc.md  bgget.md  bghide.md  bghome.md  bgload.md  bgmchk.md  bgmclear.md  bgmplay.md  bgmset.md  bgmsetd.md  bgmstop.md  bgmvar.md  bgmvol.md  bgofs.md  bgpage.md  bgput.md  bgrot.md  bgsave.md  bgscale.md  (+209 more)
sb-docs/smilebasic-4/: acls.md  arrays-guide.md  aryop.md  asc.md  beep.md  bin.md  biquad.md  break.md  brepeat.md  button.md  call.md  callidx.md  case.md  chr.md  color.md  constants.md  continue.md  controller.md  copy.md  date.md  dec.md  dim.md  dtread.md  end.md  environment-support-table.md  exec.md  files.md  fill.md  find.md  float.md  for.md  format.md  function-list.md  functions-guide.md  gputchr.md  hex.md  if.md  inc.md  inkey.md  insert.md  (+72 more)
sb-player/: index.html  package-lock.json  package.json  vite.config.js  wrangler.toml
sb-player/src/: main.js  style.css  techdemo.sb
scratchpad/: rgbread_cases.txt  t.sb
spec/: README.md  SCHEMA.md
spec/concepts/: README.md  _TEMPLATE.md  error-model.md  execution-model.md  file-and-extdata-format.md  frame-and-timing-model.md  mml-grammar.md  screen-and-color-model.md  sprite-bg-model.md
spec/instructions/: FADE.yaml  FADECHK.yaml  abs.yaml  accel.yaml  acls.yaml  acos.yaml  and.yaml  asc.yaml  asin.yaml  atan.yaml  attr.yaml  backcolor.yaml  backtrace.yaml  beep.yaml  bganim.yaml  bgchk.yaml  bgclip.yaml  bgclr.yaml  bgcolor.yaml  bgcoord.yaml  bgcopy.yaml  bgfill.yaml  bgfunc.yaml  bgget.yaml  bghide.yaml  bghome.yaml  bgload.yaml  bgmchk.yaml  bgmclear.yaml  bgmplay.yaml  bgmset.yaml  bgmsetd.yaml  bgmstop.yaml  bgmvar.yaml  bgmvol.yaml  bgofs.yaml  bgpage.yaml  bgput.yaml  bgrot.yaml  bgsave.yaml  (+210 more)
spec/reference/: constants.yaml  errors.yaml  sysvars.yaml
spec/tests/: accel.yaml  bareword_keyword_value.yaml  brepeat.yaml  button.yaml  call.yaml  dim.yaml  floor.yaml  goto.yaml  gyroa.yaml  gyrosync.yaml  gyrov.yaml  key.yaml  micdata.yaml  micsave.yaml  micstart.yaml  micstop.yaml  mpend.yaml  mpget.yaml  mpname.yaml  mprecv.yaml  mpsend.yaml  mpset.yaml  on.yaml  (+15 more)
tools/: README.md  disasm.py  extract_code.py  extract_sbsave.py  gen_specs.py  inputredirection.py  sb_input.py
(+241 files in other folders)
