# SmileBASIC 3.6.0 spec suite — Rust workspace.
# sb-spec loads + validates the YAML instruction specs under spec/; sb-core is the
# spec-first interpreter core (lexer/parser/compiler/VM), rebuilt after the pivot.
[workspace]
resolver = "2"
members = [
    "crates/sb-core",
    "crates/sb-spec",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["sb-interpreter contributors"]
repository = "https://github.com/local/sb-interpreter"

[workspace.lints.rust]
unsafe_code = "warn"

# Keep release builds reproducible/deterministic-friendly.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
