[package]
name = "sb-audio"
description = "SmileBASIC MML parser + synth (BGM/BEEP/TALK). Backends: cpal (native) / WebAudio (wasm)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
sb-core = { path = "../sb-core" }
