[package]
name = "sb-core"
description = "SmileBASIC 3.6.0 interpreter core: lexer, parser, compiler, VM. I/O- and GUI-free so it builds for wasm32; platform concerns live in the sb-platform-* crates."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# The text console *model* (grid + cursor + colors). I/O- and GUI-free, so it keeps
# sb-core's wasm32 build intact; the VM owns a Console and PRINT/LOCATE/COLOR/CLS drive it.
sb-render = { path = "../sb-render" }

# The MML parser + synth (M5). Device- and I/O-free (pure integer/`f32` math), so it keeps
# sb-core's wasm32 build intact; BGMSET/BGMPLAY compile MML into the VM-owned AudioState.
sb-audio = { path = "../sb-audio" }

# Dev-only: replay the YAML conformance fixtures (harness/corpus/cases) through the VM.
# Dev-dependencies don't affect the wasm32 lib build.
[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
