[package]
name = "sb-platform-wasm"
description = "WebAssembly runner: canvas/WebGL display, gamepad/keyboard input, IndexedDB storage. wasm-bindgen glue lands in M1."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
sb-core = { path = "../sb-core" }
sb-render = { path = "../sb-render" }
sb-audio = { path = "../sb-audio" }
