[package]
name = "sb-render"
description = "Faithful RGBA5551 layer compositor (console/GRP/BG/sprite/fade) -> RGBA framebuffer. Output doubles as the pixel-diff target for the emulator oracle."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
sb-core = { path = "../sb-core" }
