[package]
name = "sb-render"
description = "Faithful RGBA framebuffer + console text model/renderer. Output doubles as the pixel-diff target for the emulator oracle. I/O- and GUI-free so it builds for wasm32."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
