[package]
name = "sb-spec"
description = "Loader + coverage reporter for the YAML instruction specs (spec/). The spec is the single source of truth; its tests drive the deterministic conformance suite."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "sb-spec-coverage"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
